# GraphicsFramework

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Circle.cpp  Circle.h  CommonEnums.h  Direction.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.h  GuiWidget.cpp  GuiWidget.h  IO.cpp  IO.h  Point.cpp  Point.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  SimulationState.cpp  SimulationState.h  main.cpp  mainnnn.cpp
Dependencies/ImGuiFileDialog-Lib_Only/: ImGuiFileDialogConfig.h
Dependencies/ImGuiFileDialog-Lib_Only/dirent/: dirent.h
camera/: OrthogonalCamera.cpp  OrthogonalCamera.h
geometry/: Geometry.cpp  Geometry.h  GeometryLine.cpp  GeometryLine.h  GeometryPoint.cpp  GeometryPoint.h  GeometrySpring.cpp  GeometrySpring.h  GeometryVector.cpp  GeometryVector.h  Point.cpp  Point.h
gui/: GlobalSettingsWindow.cpp  GlobalSettingsWindow.h  Gui.cpp  Gui.h  GuiState.h  GuiWindow.cpp  GuiWindow.h  ImageViewer.cpp  ImageViewer.h  OutlinerWindow.cpp  OutlinerWindow.h  SceneWindow.cpp  SceneWindow.h  SelectedObjectSettingsWindow.cpp  SelectedObjectSettingsWindow.h  SettingsWindow.cpp  SettingsWindow.h
helper_geometry/: HelperGeometry.h  Vector.cpp  Vector.h
object/: Object.cpp  Object.h  Point.cpp  Point.h  Spring.cpp  Spring.h
physicalProperties/: PhysicalProperties.cpp  PhysicalProperties.h
saved_scenes/: TestScene02.txt  TestScene03.txt  a.txt  lanc.txt  save_test.txt  sima_rugo_viszszint.txt  test.txt  test_003.txt  test_save2.txt
simulation/: GlobalSimulationSettings.cpp  GlobalSimulationSettings.h  PhysicalProperties.cpp  PhysicalProperties.h  SimulationMode.h  SimulationProperties.cpp  SimulationProperties.h  SimulationState.cpp  SimulationState.h
ui/: GuiState.h  Scene.cpp  Scene.h  UIContext.cpp  UIContext.h
window/: GuiState.h  MouseButton.cpp  MouseButton.h  UIContext.cpp  UIContext.h  Window.cpp  Window.h
